estilos y mostrar pelicula

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Moiflix</title>
   <link rel="stylesheet" href="./index.css">
   <script type="module" src="./index.js"></script>
 </head>
 <body>
+  <header>
+    <div class="netflix-logo">
+      <img src="https://pngimg.com/uploads/netflix/netflix_PNG15.png" alt="">
+    </div>
+    <div class="featured">
+      <h1>Stranger Things</h1>
+      <div class="buttons">
+        <button>Play</button>
+        <button>My List</button>
+      </div>
+      <p>
+        La historia narra la súbita desaparición de un niño en esta ciudad durante la década de los 80, hecho que destapa los extraños sucesos que tienen lugar en la zona, producto de una serie de experimentos que realiza el gobierno.
+      </p>
+      
+    </div>
 
+  </header>
+  <main>
+    <h1>Films</h1>
+    <div class="film-grid">
+      
+    </div>
+  </main>
 </body>
 </html>
